== Changelog ==
= 1.7.0 =
* Feature: New brands exporter/importer introduced
* Fix: Missing some brands to filter
* Fix: Coupon doesn’t work for product variations (thanks @gekomees)
* Fix: The brand description is not shown if there are no products
* Enhancement: wpautop() for brand descriptions
* Enhancement: Other filter by brand widget enhancements
* Enhancement: Brands page link in breadcrumbs
* Enhancement: Enqueue the carousel lib conditionally
* Dev: New filter hook 'pwb_description_allowed_tags'
= 1.6.5 =
* Include icon and banner brand image in api response (thanks @qbig)
* Feature: New option for show only favorite brands in the dropdown widget and the list widget
* Feature: New option for configure the max number of brands in filter by brand widget
* Feature: Filter by brand without submit button
* Feature: New option for randomize brand logos in the list widget
* Feature: Hide empty brands in brand carousel
* Enhancement: Hide widgets when there are no results to show
* Fix: "Dokan Multivendor Marketplace" JavaScript conflict in admin
= 1.6.4 =
* Feature: Visual editor with shortcode support added to brand description
* Feature: Hide empty brands in brand widgets
* Feature: Place brand description before or after product loop
* Fix: WC import not assigning brands
* Minor fixes and tweaks
= 1.6.3 =
* Requirements: No more longer support for very old php versions (5.4 minimum)
* Fix: Product carousels shortcode display fixes
* Fix: Missing .pot file
* Fix: Coupon codes stopped working since latest update
* Fix: Carousel preloader is not working
= 1.6.2 =
* Fix: Carousels problems on responsive after the last update
= 1.6.1 =
* Feature: Favorite brands
* Fix: Brand logo full size option for single product
* Fix: Coupons brands restriction (thanks @josk79)
* Fix: Import products fixes
* Fix: PHP7 warning on 'class-perfect-woocommerce-brands.php'
* Fix: Brand not added when Duplicating Product
* Enhancement: Filter by brand widget enhancements