@@ -24,6 +24,7 @@ Whether we like to admit it or not, we are all influenced by brands. Brands are 
 - Shortcode: Display brands carousel
 - Shortcode: Display product carousel by brand
 - Shortcode: Display brands for a specific product
+- Shortcode: A-Z Listing
 - Widget: Display brands as dropdown
 - Widget: Display brands as list (brand names or brand logos)
 - Widget: Filter products by brand
