@@ -1,5 +1,6 @@
 == Changelog ==
 = 1.7.0 =
+* Feature: A-Z Listing shortcode
 * Feature: New brands exporter/importer introduced
 * Fix: Missing some brands to filter
 * Fix: Coupon doesn’t work for product variations (thanks @gekomees)
